--- a/match.html
+++ b/match.html
@@ -53,7 +53,67 @@
                                 </div>
                                 <div class="blogs-info">
                                     <h4 class="match-title">Germany VS France</h4>
-                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
+                                    <p class="match-date">March 01, 2023, 1.30 AM</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="match-info" class="right-side">
+                        <div class="thumbnail">
+                            <div class="thumbnail-container">
+                                <div class="thumbnail-image">
+                                    <img src="assets/city/qater.jpg" alt="">
+                                    <span class="diffrent">VS</span>
+                                    <img src="assets/city/ecuador.jpg" alt="">
+                                </div>
+                                <div class="blogs-info">
+                                    <h4 class="match-title">Qatar VS Ecuador</h4>
+                                    <p class="match-date">April 01, 2023, 1.30 AM</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="match-info" class="right-side">
+                        <div class="thumbnail">
+                            <div class="thumbnail-container">
+                                <div class="thumbnail-image">
+                                    <img src="assets/city/England.png" alt="">
+                                    <span class="diffrent">VS</span>
+                                    <img src="assets/city/iran.jpg" alt="">
+                                </div>
+                                <div class="blogs-info">
+                                    <h4 class="match-title">England VS Iran</h4>
+                                    <p class="match-date">May 01, 2023, 1.30 AM</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="match-info" class="right-side">
+                        <div class="thumbnail">
+                            <div class="thumbnail-container">
+                                <div class="thumbnail-image">
+                                    <img src="assets/city/senegal.png" alt="">
+                                    <span class="diffrent">VS</span>
+                                    <img src="assets/city/netherlands.png" alt="">
+                                </div>
+                                <div class="blogs-info">
+                                    <h4 class="match-title">Senegal VS Netherland</h4>
+                                    <p class="match-date">June 01, 2023, 1.30 AM</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="match-info" class="right-side">
+                        <div class="thumbnail">
+                            <div class="thumbnail-container">
+                                <div class="thumbnail-image">
+                                    <img src="assets/city/usa.jpg" alt="">
+                                    <span class="diffrent">VS</span>
+                                    <img src="assets/city/mexico.png" alt="">
+                                </div>
+                                <div class="blogs-info">
+                                    <h4 class="match-title">USA VS Mexico</h4>
+                                    <p class="match-date">July 01, 2023, 1.30 AM</p>
                                 </div>
                             </div>
                         </div>
@@ -68,7 +128,7 @@
                                 </div>
                                 <div class="blogs-info">
                                     <h4 class="match-title">Germany VS France</h4>
-                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
+                                    <p class="match-date">May 01, 2023, 1.30 AM</p>
                                 </div>
                             </div>
                         </div>
@@ -83,7 +143,7 @@
                                 </div>
                                 <div class="blogs-info">
                                     <h4 class="match-title">Germany VS France</h4>
-                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
+                                    <p class="match-date">May 01, 2023, 1.30 AM</p>
                                 </div>
                             </div>
                         </div>
@@ -98,7 +158,7 @@
                                 </div>
                                 <div class="blogs-info">
                                     <h4 class="match-title">Germany VS France</h4>
-                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
+                                    <p class="match-date">May 01, 2023, 1.30 AM</p>
                                 </div>
                             </div>
                         </div>
@@ -113,67 +173,7 @@
                                 </div>
                                 <div class="blogs-info">
                                     <h4 class="match-title">Germany VS France</h4>
-                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="match-info" class="right-side">
-                        <div class="thumbnail">
-                            <div class="thumbnail-container">
-                                <div class="thumbnail-image">
-                                    <img src="assets/germany Flag.png" alt="">
-                                    <span class="diffrent">VS</span>
-                                    <img src="assets/Flag.png" alt="">
-                                </div>
-                                <div class="blogs-info">
-                                    <h4 class="match-title">Germany VS France</h4>
-                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="match-info" class="right-side">
-                        <div class="thumbnail">
-                            <div class="thumbnail-container">
-                                <div class="thumbnail-image">
-                                    <img src="assets/germany Flag.png" alt="">
-                                    <span class="diffrent">VS</span>
-                                    <img src="assets/Flag.png" alt="">
-                                </div>
-                                <div class="blogs-info">
-                                    <h4 class="match-title">Germany VS France</h4>
-                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="match-info" class="right-side">
-                        <div class="thumbnail">
-                            <div class="thumbnail-container">
-                                <div class="thumbnail-image">
-                                    <img src="assets/germany Flag.png" alt="">
-                                    <span class="diffrent">VS</span>
-                                    <img src="assets/Flag.png" alt="">
-                                </div>
-                                <div class="blogs-info">
-                                    <h4 class="match-title">Germany VS France</h4>
-                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="match-info" class="right-side">
-                        <div class="thumbnail">
-                            <div class="thumbnail-container">
-                                <div class="thumbnail-image">
-                                    <img src="assets/germany Flag.png" alt="">
-                                    <span class="diffrent">VS</span>
-                                    <img src="assets/Flag.png" alt="">
-                                </div>
-                                <div class="blogs-info">
-                                    <h4 class="match-title">Germany VS France</h4>
-                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
+                                    <p class="match-date">May 01, 2023, 1.30 AM</p>
                                 </div>
                             </div>
                         </div>
