social icon added

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <main class="main-container">
         <div class="main-section">
             <div class="main-side-bar">
-                <button class="site-button"><a href="">Upcoming Match</a></button>
+                <button class="site-button"><a href="match.html">Upcoming Match</a></button>
                 <button class="site-button"><a href="">All Group</a></button>
-                <button class="site-button button-color"><a href="">Blog</a></button>
+                <button class="site-button button-color"><a href="index.html">Blog</a></button>
             </div>
             <div class="right-side-container">
                 <div class="right-side">
@@ -216,6 +216,23 @@
             <div><a href="">Privacy Settings </a></div>
             <div><a href="">Goal App </a></div>
             <div><a href="">Goal Live </a></div>
+        </div>
+        <div id="social-icon" class="footer-menu">
+            <div>
+                <a href="https://www.facebook.com/Sl243" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+            </div>
+            <div><a href="https://www.instagram.com/ochanaprem/" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-instagram"></i></a>
+            </div>
+            <div><a href="https://twitter.com/ochanaprem" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-twitter"></i></a>
+            </div>
+            <div><a href="http://" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-linkedin-in"></i></a></div>
+            <div><a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-pinterest"></i></a>
+            </div>
         </div>
     </footer>
 </body>
