--- a/match.html
+++ b/match.html
@@ -47,12 +47,12 @@
                         <div class="thumbnail">
                             <div class="thumbnail-container">
                                 <div class="thumbnail-image">
-                                    <img src="assets/germany Flag.png" alt="">
+                                    <img src="assets/city/argentina.jpg" alt="">
                                     <span class="diffrent">VS</span>
-                                    <img src="assets/Flag.png" alt="">
+                                    <img src="assets/city/brazil.png" alt="">
                                 </div>
                                 <div class="blogs-info">
-                                    <h4 class="match-title">Germany VS France</h4>
+                                    <h4 class="match-title">Argentina VS Brazil</h4>
                                     <p class="match-date">March 01, 2023, 1.30 AM</p>
                                 </div>
                             </div>
@@ -128,7 +128,7 @@
                                 </div>
                                 <div class="blogs-info">
                                     <h4 class="match-title">Germany VS France</h4>
-                                    <p class="match-date">May 01, 2023, 1.30 AM</p>
+                                    <p class="match-date">Augest 01, 2023, 1.30 AM</p>
                                 </div>
                             </div>
                         </div>
@@ -137,13 +137,13 @@
                         <div class="thumbnail">
                             <div class="thumbnail-container">
                                 <div class="thumbnail-image">
-                                    <img src="assets/germany Flag.png" alt="">
+                                    <img src="assets/city/spain.png" alt="">
                                     <span class="diffrent">VS</span>
-                                    <img src="assets/Flag.png" alt="">
+                                    <img src="assets/city/denmark.png" alt="">
                                 </div>
                                 <div class="blogs-info">
-                                    <h4 class="match-title">Germany VS France</h4>
-                                    <p class="match-date">May 01, 2023, 1.30 AM</p>
+                                    <h4 class="match-title">Spain VS Denmark</h4>
+                                    <p class="match-date">September 01, 2023, 1.30 AM</p>
                                 </div>
                             </div>
                         </div>
@@ -152,13 +152,13 @@
                         <div class="thumbnail">
                             <div class="thumbnail-container">
                                 <div class="thumbnail-image">
-                                    <img src="assets/germany Flag.png" alt="">
+                                    <img src="assets/city/costa rica.png" alt="">
                                     <span class="diffrent">VS</span>
-                                    <img src="assets/Flag.png" alt="">
+                                    <img src="assets/city/japan.png" alt="">
                                 </div>
                                 <div class="blogs-info">
-                                    <h4 class="match-title">Germany VS France</h4>
-                                    <p class="match-date">May 01, 2023, 1.30 AM</p>
+                                    <h4 class="match-title">Costa Rica VS Japan</h4>
+                                    <p class="match-date">October 01, 2023, 1.30 AM</p>
                                 </div>
                             </div>
                         </div>
@@ -167,13 +167,13 @@
                         <div class="thumbnail">
                             <div class="thumbnail-container">
                                 <div class="thumbnail-image">
-                                    <img src="assets/germany Flag.png" alt="">
+                                    <img src="assets/city/belgium.png" alt="">
                                     <span class="diffrent">VS</span>
-                                    <img src="assets/Flag.png" alt="">
+                                    <img src="assets/city/canada.jpg" alt="">
                                 </div>
                                 <div class="blogs-info">
-                                    <h4 class="match-title">Germany VS France</h4>
-                                    <p class="match-date">May 01, 2023, 1.30 AM</p>
+                                    <h4 class="match-title">Belgium VS Canada</h4>
+                                    <p class="match-date">November 01, 2023, 1.30 AM</p>
                                 </div>
                             </div>
                         </div>
@@ -201,6 +201,23 @@
             <div><a href="">Privacy Settings </a></div>
             <div><a href="">Goal App </a></div>
             <div><a href="">Goal Live </a></div>
+        </div>
+        <div id="social-icon" class="footer-menu">
+            <div>
+                <a href="https://www.facebook.com/Sl243" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+            </div>
+            <div><a href="https://www.instagram.com/ochanaprem/" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-instagram"></i></a>
+            </div>
+            <div><a href="https://twitter.com/ochanaprem" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-twitter"></i></a>
+            </div>
+            <div><a href="http://" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-linkedin-in"></i></a></div>
+            <div><a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-pinterest"></i></a>
+            </div>
         </div>
     </footer>
 </body>
