--- a/match.html
+++ b/match.html
@@ -178,6 +178,51 @@
                             </div>
                         </div>
                     </div>
+                    <div id="match-info" class="right-side">
+                        <div class="thumbnail">
+                            <div class="thumbnail-container">
+                                <div class="thumbnail-image">
+                                    <img src="assets/city/portugal.png" alt="">
+                                    <span class="diffrent">VS</span>
+                                    <img src="assets/city/ghana.png" alt="">
+                                </div>
+                                <div class="blogs-info">
+                                    <h4 class="match-title">Portugal VS Ghana</h4>
+                                    <p class="match-date">December 01, 2023, 1.30 AM</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="match-info" class="right-side">
+                        <div class="thumbnail">
+                            <div class="thumbnail-container">
+                                <div class="thumbnail-image">
+                                    <img src="assets/city/uruguay.png" alt="">
+                                    <span class="diffrent">VS</span>
+                                    <img src="assets/city/serbia.png" alt="">
+                                </div>
+                                <div class="blogs-info">
+                                    <h4 class="match-title">Uruguay VS Serbia</h4>
+                                    <p class="match-date">January 01, 2024, 1.30 AM</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="match-info" class="right-side">
+                        <div class="thumbnail">
+                            <div class="thumbnail-container">
+                                <div class="thumbnail-image">
+                                    <img src="assets/city/croatia.png" alt="">
+                                    <span class="diffrent">VS</span>
+                                    <img src="assets/city/poland.svg" alt="">
+                                </div>
+                                <div class="blogs-info">
+                                    <h4 class="match-title">Croatia VS Poland</h4>
+                                    <p class="match-date">February 01, 2023, 1.30 AM</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
