--- a/match.html
+++ b/match.html
@@ -20,9 +20,8 @@
                 <h1 class="header-title">
                     The Greatest <br> show on the <br> earth
                 </h1>
-                <p class="pragraph">Contrary to popular belief, Lorem Ipsum is not simply <br>
-                    random text. It has roots in a piece of classical Latin literature <br>
-                    from 45 BC, making it over 2000 years old.</p>
+                <p class="pragraph">Football World Cup is hosted in air-conditioned stadiums in the middle of the desert
+                    of Qatar.</p>
                 <p class="pragraph pragraph-1">Contrary to popular belief, is not simply random text.</p>
                 <button class="button">Watch Live &nbsp; <span><i class="fa-solid fa-greater-than"></i></span></button>
             </div>
@@ -37,9 +36,9 @@
     <main class="main-container">
         <div class="main-section">
             <div class="main-side-bar">
-                <button class="site-button"><a href="">Upcoming Match</a></button>
-                <button class="site-button"><a href="">All Group</a></button>
-                <button class="site-button button-color"><a href="">Blog</a></button>
+                <button class="site-button"><a href="match.html">Upcoming Match</a></button>
+                <button class="site-button"><a href="allgroup.html">All Group</a></button>
+                <button class="site-button button-color"><a href="index.html">Blog</a></button>
             </div>
             <div class="upcoming-match">
                 <div class="right-side-container">
