media query responnsive added

--- a/allgroup.html
+++ b/allgroup.html
@@ -37,8 +37,8 @@
         <div class="main-section">
             <div class="main-side-bar">
                 <button class="site-button"><a href="match.html">Upcoming Match</a></button>
-                <button class="site-button"><a href="allgroup.html">All Group</a></button>
-                <button class="site-button button-color"><a href="index.html">Blog</a></button>
+                <button class="site-button button-color"><a href="allgroup.html">All Group</a></button>
+                <button class="site-button"><a href="index.html">Blog</a></button>
             </div>
             <div class="upcoming-match">
                 <div class="group-country-name">
