--- a/index.html
+++ b/index.html
@@ -35,10 +35,21 @@
 
     <main class="main-container">
         <div class="main-section">
-            <div class="main-side-bar">
+            <!-- <div class="main-side-bar">
                 <button class="site-button"><a href="match.html">Upcoming Match</a></button>
                 <button class="site-button"><a href="allgroup.html">All Group</a></button>
                 <button class="site-button button-color"><a href="index.html">Blog</a></button>
+            </div> -->
+            <div class="main-side-bar">
+                <div>
+                    <button class="site-button"><a href="match.html">Upcoming Match</a></button>
+                </div>
+                <div>
+                    <button class="site-button"><a href="allgroup.html">All Group</a></button>
+                </div>
+                <div>
+                    <button class="site-button button-color"><a href="index.html">Blog</a></button>
+                </div>
             </div>
             <div class="right-side-container">
                 <div class="right-side">
