--- a/match.html
+++ b/match.html
@@ -23,7 +23,9 @@
                 <p class="pragraph">Football World Cup is hosted in air-conditioned stadiums in the middle of the desert
                     of Qatar.</p>
                 <p class="pragraph pragraph-1">Contrary to popular belief, is not simply random text.</p>
-                <button class="button">Watch Live &nbsp; <span><i class="fa-solid fa-greater-than"></i></span></button>
+                <div class="box-button">
+                    <p>Watch Live &nbsp; <span><i class="fa-solid fa-greater-than"></i></span></p>
+                </div>
             </div>
             <div class="header-image">
                 <img src="assets/messi.jpg" alt="">
